# axum_backendStudy

./: Cargo.toml  config.toml
front/: noNameWeb.html
front/script/: script.js
src/: jwt.rs  main.rs  schema.rs  types.rs
src/types/: config.rs
