[package]
name = "axum-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.39.1", features = ["full"] }
axum = { version = "^0.7.5", features = ["multipart"] }
diesel = { version = "^2.2.2", features = ["postgres_backend", "uuid", "chrono"] }
diesel-async = { version = "^0.5.0", features = ["bb8", "postgres"] }
jwt-authorizer = { version = "^0.14" }                                 # Enable RustTLS some day...
jsonwebtoken = "^9.3.0"
bb8 = "^0.8.5"
serde = { version = "^1.0.204", features = ["derive"] }
uuid = { version = "^1.10.0", features = ["v4", "v7", "serde"]}
url = { version = "^2.5.2", features = ["serde"] }
toml = "^0.8.16"
anyhow = "^1.0.86"
chrono = { version = "^0.4.38", features = ["serde"] }
argon2 = "^0.5.3"
tracing = "^0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }